--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^7.13.0"
   },
   "devDependencies": {
+    "@alpha/test-utils": "workspace:*",
     "@eslint/js": "^9.39.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
