setup separation between unit tests and integration tests

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,7 +8,9 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest --config vite.config.ts && vitest --config vitest.integration.config.ts",
+    "test:unit": "vitest --config vite.config.ts",
+    "test:integration": "vitest --config vitest.integration.config.ts"
   },
   "dependencies": {
     "@alpha/state": "workspace:*",
